src/objects/Interview__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application for which this interview was performed.</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Candidate_Formula__c</fullName>
        <formula>HYPERLINK
( Application__r.Candidate__r.Id ,
Application__r.Candidate__r.First_Name__c
&amp;
&quot; &quot;
&amp;
Application__r.Candidate__r.Last_Name__c )</formula>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Type__c</fullName>
        <label>Interview Type</label>
        <picklist>
            <picklistValues>
                <fullName>Recruiter Screen</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HM Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Interview</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Interviewers__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Total Number of Interviewers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Interview</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Interview_Type__c</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Interviews</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Interview_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Interviews</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Onsites</fullName>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Interview_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Type__c</field>
            <operation>equals</operation>
            <value>Onsite Interview</value>
        </filters>
        <label>Today&apos;s Onsites</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Phone_Screens</fullName>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Interview_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Type__c</field>
            <operation>equals</operation>
            <value>Recruiter Screen,Hiring Manager Screen</value>
        </filters>
        <label>Today&apos;s Phone Screens</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Interview_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Unassigned Reviews</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_HM_Screens_Dashboard</fullName>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Type__c</field>
            <operation>equals</operation>
            <value>HM Screen</value>
        </filters>
        <label>Upcoming HM Screens</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Onsites</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Interview_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Type__c</field>
            <operation>equals</operation>
            <value>Onsite Interview</value>
        </filters>
        <label>Upcoming Onsites</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Onsites_Dashboard</fullName>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Type__c</field>
            <operation>equals</operation>
            <value>Onsite Interview</value>
        </filters>
        <label>Upcoming Onsites</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Phone_Screens</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Interview_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Type__c</field>
            <operation>equals</operation>
            <value>Recruiter Screen,HM Screen</value>
        </filters>
        <label>Upcoming Phone Screens</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Phone_Screens_Dashboard</fullName>
        <columns>Application__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Interview_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Type__c</field>
            <operation>equals</operation>
            <value>Recruiter Screen,HM Screen</value>
        </filters>
        <label>Upcoming Phone Screens</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>InterviewID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>